# qt-cmake-templates

./: README.md
ui-lib/: CMakeLists.txt
ui-lib/src/: CMakeLists.txt  window.cpp  window.h  window.ui
